[ CHG ] : ExtendsMarshaller is now an object